--- a/trangchu.html
+++ b/trangchu.html
@@ -1852,7 +1852,7 @@ $('.sb-list-items').append($(ele));
 </div>
 <div class="nav-place ng-scope" ng-controller="MenuLoginCtrl">
 <div class="account-manage" id="accountmanager">
-<a class="fd-btn-login-new" ng-click="Login()" ng-class="{'loading':IsLoading}"><span>Đăng nhập</span></a><div id="update-profile-popup" style="display: none"></div><div id="update-profile-popup-loading" style="display: none">
+<a class="fd-btn-login-new" href="dang-nhap.html" ng-class="{'loading':IsLoading}"><span>Đăng nhập</span></a><div id="update-profile-popup" style="display: none"></div><div id="update-profile-popup-loading" style="display: none">
 Loading...</div><div id="loginPopup" style="display: none"><div id="loginPopupPH" style="text-align:center; line-height:30px;"><img style="display:inline" src="//static.foody.vn/s2/style/images/icons/ajax-loader.gif"></div></div><div id="loginFacebookPopup" style="display: none">Loading...</div><input type="hidden" id="encryptedlogin">
 </div>
 <div id="NotificationCtrl" style="position: relative; float: left;" ng-controller="NotificationCtrl" ng-init="Init('')" class="ng-scope">
