--- a/comment-hanuri-quan-an-han-quoc-dien-bien-phu.html
+++ b/comment-hanuri-quan-an-han-quoc-dien-bien-phu.html
@@ -3951,4 +3951,33 @@ Cấu hình bộ sưu tập</div>
 <label>Tải ứng dụng</label>
 </a></li></ul></div>
 
-<div id="qtip-rcontainer"></div><div id="wishListFormWrapper"></div><div id="wishlistContextContainer"></div><div class="foo-au-suggest-panel" data-bind="fadeVisible:isShow()" style="display: none;"><ul class="group" data-bind="foreach: categories()"></ul></div><div class="default-keyword" style="position: absolute" data-bind="visible: isShow"><ul data-bind="foreach: items" class="left"><li data-bind="text: name, css:{'selected':$root.currentIndex()==index}, click: $root.handleItemClick, event:{mouseover: $root.handleItemClick} "></li></ul><!--ko with: selectedItem()--><ul data-bind="foreach: items" class="right"><li data-bind="css:{'selected':$parent.currentIndex()==index}, event:{mouseover: $parent.handleItemHover}"><a data-bind="text: name, attr:{href: link}"></a></li></ul><!--/ko--></div><iframe name="oauth2relay664808951" id="oauth2relay664808951" src="https://accounts.google.com/o/oauth2/postmessageRelay?parent=https%3A%2F%2Fwww.foody.vn&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.vi.Q8YSjS_m4Sg.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCOzfWIDGZb7T0mX_tXneQ0PiWyUfQ#rpctoken=573442637&amp;forcesecure=1" tabindex="-1" aria-hidden="true" style="width: 1px; height: 1px; position: absolute; top: -100px;"></iframe></body></html>
+<div id="qtip-rcontainer"></div><div id="wishListFormWrapper"></div><div id="wishlistContextContainer"></div><div class="foo-au-suggest-panel" data-bind="fadeVisible:isShow()" style="display: none;"><ul class="group" data-bind="foreach: categories()"></ul></div><div class="default-keyword" style="position: absolute" data-bind="visible: isShow"><ul data-bind="foreach: items" class="left"><li data-bind="text: name, css:{'selected':$root.currentIndex()==index}, click: $root.handleItemClick, event:{mouseover: $root.handleItemClick} "></li></ul><!--ko with: selectedItem()--><ul data-bind="foreach: items" class="right"><li data-bind="css:{'selected':$parent.currentIndex()==index}, event:{mouseover: $parent.handleItemHover}"><a data-bind="text: name, attr:{href: link}"></a></li></ul><!--/ko--></div><iframe name="oauth2relay664808951" id="oauth2relay664808951" src="https://accounts.google.com/o/oauth2/postmessageRelay?parent=https%3A%2F%2Fwww.foody.vn&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.vi.Q8YSjS_m4Sg.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCOzfWIDGZb7T0mX_tXneQ0PiWyUfQ#rpctoken=573442637&amp;forcesecure=1" tabindex="-1" aria-hidden="true" style="width: 1px; height: 1px; position: absolute; top: -100px;"></iframe>
+<script>
+    $('#open_city').click(function(event){
+        $('#popupLocation').css('display','block');
+        event.stopPropagation();
+    });
+    $(document).click(function(){
+        $('#popupLocation').css('display','none');
+    });
+    //    $('body').click(function(){
+    //        $('#popupLocation').css('display','none');
+    //    });
+    function loadItem(){
+        $('.list-items').fadeOut(500).fadeIn(500);
+    }
+    $('.ng-binding').click(function (){
+        $('.ng-binding').removeClass('current');
+        $(this).addClass('current');
+        loadItem();
+    });
+    $('.nav-left .list-nav li.ng-scope').click(function(){
+        $('.nav-left li.ng-scope').removeClass('active');
+        $(this).addClass('active');
+        loadItem();
+    });
+    $('.home2-container.box-group.discovery.ng-scope').remove();
+    $('.footer-down-app-wrap').remove();
+    $('#tab-footer-top-friend-user').remove();
+</script>
+</body></html>
