--- a/dang-nhap.html
+++ b/dang-nhap.html
@@ -6,10 +6,10 @@
     
     <script src="https://sdk.accountkit.com/en_US/sdk.js?hash=2ba5957026e31949b0d638eb9503672d" async=""></script><script src="http://id.foody.vn/Scripts/jquery-1.9.1.min.js"></script>
     <script src="http://id.foody.vn/Scripts/social-login.js"></script>
-    <script src="http://id.foody.vn/Scripts/bootstrap.min.js"></script>
-    <link href="http://id.foody.vn/Content/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="http://id.foody.vn/Content/styles.css" rel="stylesheet" type="text/css">
-    <link href="http://id.foody.vn/Content/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script src="css/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="http://id.foody.vn/Scripts/jquery.validate.min.js" type="text/javascript"></script>
     <script src="http://id.foody.vn/Scripts/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
     <script src="http://id.foody.vn/Scripts/CommonHelper.js" type="text/javascript"></script>
@@ -65,7 +65,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="header-line"></div>
             <div class="wrapper">
-                <a href="trangchu.html" class="logo" rel="home" alt="VFood-logo">
+                <a href="trangchu.html" class="logo" rel="home" alt="Vfood-logo">
                     <img src="image/logo.png" alt="Voody.vn">
                 </a>
             </div>
@@ -82,7 +82,7 @@
     <div class="col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Đăng nhập VFood</h3>
+                <h3 class="panel-title">Đăng nhập Vfood</h3>
             </div>
             <div class="panel-body">
 <form id="login-form" action="trang-chu.html" method="get" role="form" novalidate="novalidate" class="ng-pristine ng-valid">                    <fieldset>
@@ -123,7 +123,7 @@
 </form>                <div class="panel-login-type text-center martop-10">
                     
                     <p class="martop-10 text font12">
-                        Bạn chưa có tài khoản? <a href="/dang-ky?returnUrl=https%3A%2F%2Fwww.foody.vn%2F" class="link font12">Đăng ký</a>
+                        Bạn chưa có tài khoản? <a href="#" class="link font12">Đăng ký</a>
                     </p>
                 </div>
             </div>
